...
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/textYellow">
    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="UserName"
        android:layout_marginTop="8dp"
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#ffa500"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/textYellow">
    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="32dp"
...
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:text="Forgot Password ?" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="SIGN IN"
        android:textColor="@color/textWhite"
        android:layout_gravity="center"
        android:background="@drawable/round"
...
