...
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:icon="@drawable/home_24dp"
            android:title="Home">
        </item>

        <item android:id="@+id/nav_courses"
            android:icon="@drawable/courses_24dp"
            android:title="Courses">

        </item>
        <item android:id="@+id/nav_files"
            android:icon="@drawable/files_24dp"
            android:title="Files">

        </item>
        <item android:id="@+id/nav_feedback"
            android:icon="@drawable/feedback_24dp"
            android:title="Feedback">

        </item>
        <item android:id="@+id/nav_personal"
            android:icon="@drawable/personal_24dp"
            android:title="Personal">

        </item>
    </group>
</menu>
