...
        android:layout_marginLeft="32dp"
        android:textColor="@color/textWhite"
        android:background="@drawable/round"
        android:text="View Registered Course" />

    <Button
        android:id="@+id/button18"
        android:layout_width="256dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="32dp"
...
