...
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:textColor="@color/textWhite"
        android:background="@drawable/round"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="256dp"
        android:layout_height="128dp"
        android:text="View Files"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="32dp"
...
