<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordUpdate"
    android:orientation="vertical"
    android:background="@color/background"
    android:layout_marginTop="16dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView23"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                app:srcCompat="@drawable/team" />

            <TextView
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Update Password"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:textColor="@color/textYellow"
        android:gravity="center"
        android:textSize="32sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/textYellow">
    <EditText
        android:id="@+id/editText13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:textColor="@color/textYellow"
        android:hint="New Password"
        android:inputType="textPassword"
        android:backgroundTint="@android:color/holo_red_light"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/textYellow">
    <EditText
        android:id="@+id/editText14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:textColor="@color/textYellow"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:backgroundTint="@android:color/holo_red_light"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button26"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:textColor="@color/textWhite"
        android:background="@drawable/round"
        android:text="Submit" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>