...
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                app:srcCompat="@drawable/team" />

            <Button
        android:id="@+id/button8"
        android:layout_width="256dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="32dp"
...
        android:layout_marginLeft="32dp"
        android:textColor="@color/textWhite"
        android:background="@drawable/round"
        android:text="Update Email" />

    <Button
        android:id="@+id/button10"
        android:layout_width="256dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="32dp"
...
