<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProvideFeedback"
    android:orientation="vertical"
    android:background="@color/background"
    android:layout_marginTop="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView24"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                app:srcCompat="@drawable/feedback" />

            <TextView
        android:id="@+id/textView32"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:textColor="@color/textYellow"
        android:textSize="32sp"
        android:gravity="center"
        android:text="Provide Feedback" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:textStyle="bold"
        android:textColor="@color/textYellow"
        android:textSize="16sp"
        android:text="Course ID " />

    <Spinner
        android:id="@+id/spinner4"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_red_light"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/textYellow">
    <EditText
        android:id="@+id/editText12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:textColor="@color/textYellow"
        android:gravity="start|top"
        android:hint="Feedback"
        android:inputType="textMultiLine"
        android:backgroundTint="@android:color/holo_red_light"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button29"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:textColor="@color/textWhite"
        android:background="@drawable/round"
        android:layout_height="wrap_content"
        android:text="Submit" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>