...
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                app:srcCompat="@drawable/feedback" />

            <Button
        android:id="@+id/button12"
        android:layout_width="256dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="32dp"
...
